--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "rust-woff"
-version = "0.0.1"
+version = "0.0.2"
 authors = ["Patrick Walton <pcwalton@mimiga.net>"]
+edition="2015"
 
 [lib]
 name = "woff"
